--- a/src/example.yaml
+++ b/src/example.yaml
@@ -13,14 +13,14 @@ configuration :
   port : 12644
 
 sendRules :
-  - action : duplicate      
+  - action : ssss      
     src    : alice       
     dest   : bob
     kind   : aa
 receiveRules :
   - action : delay      
-    src    : alice       
-    dest   : bob
+    src    : alice      
+    dest   : logger
   - action : drop 
     src    : alice
     dest   : bob
